# rybakov_artem_lab_1

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Circle.h  Cube.h  Rectangle.h  Shape.h  Sphere.h  ThreeDimensionalShape.h  TwoDimensionalShape.h
src/: Circle.cpp  Cube.cpp  Rectangle.cpp  Sphere.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
